--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <p class="para" contenteditable="true">Parles de ta scolarité professionnelle.</p>
                 <h3>Diplômes</h3>
                 <p class="para" contenteditable="true">Liste tes diplômes dans le domaine demandé.</p>
-                <h3>Autres Diplomes (si nécessaire)</h3>
+                <h3>Autres Diplômes (si nécessaire)</h3>
                 <p class="para" contenteditable="true">Liste tes diplômes supplémentaires.</p>
                 <h2 class="right-title">Expérience</h2>
                 </section>
