--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resumeStyle.css">
+    <link rel="stylesheet" href="style.css">
     <title>Résumé Responsive</title><!--Pour le titre de l'onglet sur le navigateur-->
 </head>
 <body>
