--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!--Thierry Laval Développeur Web (https://thierrylaval.dev)
-    Page simplifiée pour créer un site html/css de présentation de son cv
--->
 <!DOCTYPE html>
+<!-- Thierry Laval Développeur Web (https://thierrylaval.dev) Page simplifiée pour créer un site html/css de présentation de son cv-->
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Résumé Responsive</title><!--Pour le titre de l'onglet sur le navigateur-->
+    <title>Résumé Responsive</title><!-- Pour le titre de l'onglet sur le navigateur-->
 </head>
 <body>
     <main class="main-content">
